<resources>

	<string name="app_name">Диплом</string>

	<!--main screen region-->
	<string name="main_screen_title">Поиск дубликатов изображений</string>
	<string name="main_screen_current_image_one">Изображение 1</string>
	<string name="main_screen_current_image_two">Изображение 2</string>
	<string name="main_screen_choose_image_source">Выберите источник</string>
	<string name="main_screen_button_choose_from_gallery">Галерея</string>
	<string name="main_screen_button_choose_from_link">Ссылка</string>
	<string name="main_screen_image_not_selected_msg">Изображение не выбрано.\n Используйте кнопки ниже</string>
	<string name="main_screen_show_compare_process">Показать сравнение подробно</string>
	<string name="main_screen_button_compare_images">Сравнить</string>
	<!--end region-->

	<!--choose image from link region-->
	<string name="choose_image_from_link_title">Поиск по ссылке. Изображение №%s</string>
	<string name="choose_image_from_link_put_your_link_here_msg">Вставьте ниже вашу ссылку, а я попробую найти изображение. Убедитесь, что ссылка действительно ведет на изображение.</string>
	<string name="choose_image_from_link_text_edit_hint">Ссылка на ваше изображение</string>
	<string name="choose_image_from_link_wait_your_link">Ожидание ввода ссылки.\nВаше изображение появится здесь</string>
	<string name="choose_image_from_link_is_your_image">Изображение найдено правильно?</string>
	<string name="choose_image_from_link_agree">Да</string>
	<string name="choose_image_from_link_clear_link">Очистить</string>
	<string name="choose_image_from_link_load_error_msg">Не удалось найти изображение по данной ссылке. Пожалуйста, проверьте вашу ссылку</string>
	<!--end region-->

	<!--show compare process region-->
	<string name="show_compare_process_title">Демонстрация сравнения</string>
	<string name="show_compare_process_source_image_step_first">1. Исходник</string>
	<string name="show_compare_process_scaled_image_step_second">2. Уменьшенное изображение (%1$s x  %2$s)</string>
	<string name="show_compare_process_to_gray_scale_step_third">3. В оттенках серого</string>
	<string name="show_compare_process_pixels_info_title_step_fouth">4. Информация о пикселях</string>
	<string name="show_compare_process_pixels_creating_perceptive_hash_code_step_fifth">5. Создание перцептиного хеш-кода</string>
	<string name="show_compare_process_pixels_result_code_step_sixth">6. Результат</string>
	<string name="show_compare_process_close_button_title">Выйти</string>
	<string name="show_compare_process_pixels_info_pixels_count">Всего пикселей: %s</string>
	<string name="show_compare_process_pixels_info_pixels_sum">Сумма пикселей: %s</string>
	<string name="show_compare_process_pixels_info_average_pixel">Средний пиксель: %s</string>
	<string name="show_compare_process_hash_length">Длина хеша: %s</string>
	<string name="show_compare_process_creating_perceptive_hash_code_success">Галочка</string>
	<string name="show_compare_process_creating_perceptive_hash_code_failed">Провал</string>
	<!--end region-->

</resources>