<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/black26">

	<LinearLayout
		android:id="@+id/llToolbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="16dp"
		android:layout_marginTop="16dp"
		android:orientation="horizontal"
		app:layout_constraintTop_toTopOf="parent">

		<ImageView
			android:id="@+id/ivArrowBack"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:paddingEnd="4dp"
			android:src="@drawable/ic_arrow_back" />

		<TextView
			style="@style/S20White"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:text="@string/choose_image_from_link_title" />

	</LinearLayout>

	<TextView
		android:id="@+id/tvPutLinkHereMsg"
		style="@style/S12White"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="16dp"
		android:layout_marginTop="16dp"
		android:text="@string/choose_image_from_link_put_your_link_here_msg"
		app:layout_constraintTop_toBottomOf="@id/llToolbar" />

	<EditText
		android:id="@+id/editTextLink"
		style="@style/S16Black26"
		android:layout_width="match_parent"
		android:layout_height="36dp"
		android:layout_margin="16dp"
		android:background="@drawable/background_link_text_edit"
		android:hint="@string/choose_image_from_link_text_edit_hint"
		android:inputType="text"
		android:maxLines="1"
		android:paddingStart="16dp"
		app:layout_constraintTop_toBottomOf="@id/tvPutLinkHereMsg" />

	<FrameLayout
		android:id="@+id/flImageFromLink"
		android:layout_width="match_parent"
		android:layout_height="380dp"
		android:layout_margin="16dp"
		app:layout_constraintTop_toBottomOf="@id/editTextLink">

		<TextView
			android:id="@+id/tvIsYourImageMsg"
			style="@style/S16White"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:text="@string/choose_image_from_link_is_your_image"
			android:visibility="gone" />

		<TextView
			android:id="@+id/tvImageFromLinkStateInfo"
			style="@style/S20White"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center"
			android:text="@string/choose_image_from_link_wait_your_link" />

		<ImageView
			android:id="@+id/ivImageFromLink"
			android:layout_width="match_parent"
			android:layout_height="350dp"
			android:layout_gravity="bottom"
			android:background="@drawable/background_current_image" />

	</FrameLayout>

	<LinearLayout
		android:id="@+id/llAgreeOrClearButtons"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="16dp"
		android:layout_marginTop="16dp"
		android:gravity="center"
		android:orientation="horizontal"
		android:visibility="gone"
		app:layout_constraintTop_toBottomOf="@id/flImageFromLink">

		<TextView
			android:id="@+id/btnClearLink"
			style="@style/S16White"
			android:layout_width="150dp"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="16dp"
			android:background="@drawable/background_clear_link_button"
			android:gravity="center"
			android:paddingHorizontal="32dp"
			android:paddingVertical="16dp"
			android:text="@string/choose_image_from_link_clear_link" />

		<TextView
			android:id="@+id/btnAgree"
			style="@style/S16White"
			android:layout_width="150dp"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="16dp"
			android:background="@drawable/background_agree_button"
			android:gravity="center"
			android:paddingHorizontal="32dp"
			android:paddingVertical="16dp"
			android:text="@string/choose_image_from_link_agree" />

	</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>