<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/black26"
	tools:context=".MainActivity">

	<TextView
		android:id="@+id/tvTitle"
		style="@style/S20White"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="@string/main_screen_title"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<View
		android:id="@+id/viewVerticalSeparator"
		android:layout_width="2dp"
		android:layout_height="0dp"
		android:background="@color/white"
		app:layout_constraintBottom_toBottomOf="@id/viewHorizontalSeparator"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/tvTitle" />

	<TextView
		android:id="@+id/tvCurrentImageOne"
		style="@style/S16White"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="4dp"
		android:layout_marginTop="16dp"
		android:text="@string/main_screen_current_image_one"
		app:layout_constraintEnd_toEndOf="@id/viewVerticalSeparator"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/tvTitle" />

	<TextView
		android:id="@+id/tvCurrentImageTwo"
		style="@style/S16White"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:text="@string/main_screen_current_image_two"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="@id/viewVerticalSeparator"
		app:layout_constraintTop_toBottomOf="@id/tvTitle" />

	<FrameLayout
		android:id="@+id/flCurrentImageOne"
		android:layout_width="150dp"
		android:layout_height="150dp"
		android:layout_marginTop="16dp"
		app:layout_constraintEnd_toEndOf="@id/viewVerticalSeparator"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/tvCurrentImageOne">

		<TextView
			android:id="@+id/tvImageOneNotSelectedMsg"
			style="@style/S16White"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center"
			android:text="@string/main_screen_image_not_selected_msg"/>

		<ImageView
			android:id="@+id/ivCurrentImageOne"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="@drawable/background_current_image"
			android:scaleType="fitCenter" />

	</FrameLayout>

	<FrameLayout
		android:id="@+id/flCurrentImageTwo"
		android:layout_width="150dp"
		android:layout_height="150dp"
		android:layout_marginTop="16dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="@id/viewVerticalSeparator"
		app:layout_constraintTop_toBottomOf="@id/tvCurrentImageTwo">

		<TextView
			android:id="@+id/tvImageTwoNotSelectedMsg"
			style="@style/S16White"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center"
			android:text="@string/main_screen_image_not_selected_msg"/>

		<ImageView
			android:id="@+id/ivCurrentImageTwo"
			android:layout_width="150dp"
			android:layout_height="150dp"
			android:background="@drawable/background_current_image"
			android:scaleType="fitCenter" />

	</FrameLayout>

	<TextView
		android:id="@+id/tvChooseOneImageSrc"
		style="@style/S16White"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:text="@string/main_screen_choose_image_source"
		app:layout_constraintEnd_toEndOf="@id/viewVerticalSeparator"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/flCurrentImageOne" />

	<LinearLayout
		android:id="@+id/llChooseSourceList"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:orientation="vertical"
		app:layout_constraintEnd_toEndOf="@id/viewVerticalSeparator"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/tvChooseOneImageSrc">

		<TextView
			android:id="@+id/btnChooseOneFromGallery"
			style="@style/S16White"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/background_choose_button_gallery"
			android:paddingHorizontal="44dp"
			android:paddingVertical="16dp"
			android:text="@string/main_screen_button_choose_from_gallery"
			app:layout_constraintEnd_toEndOf="@id/viewVerticalSeparator"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/ivCurrentImageOne" />

		<TextView
			android:id="@+id/btnChooseOneFromLink"
			style="@style/S16White"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:background="@drawable/background_choose_button_gallery"
			android:paddingHorizontal="44dp"
			android:paddingVertical="16dp"
			android:text="@string/main_screen_button_choose_from_link"
			app:layout_constraintEnd_toEndOf="@id/viewVerticalSeparator"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/ivCurrentImageOne" />

	</LinearLayout>

	<TextView
		android:id="@+id/tvChooseTwoImageSrc"
		style="@style/S16White"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:text="@string/main_screen_choose_image_source"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="@id/viewVerticalSeparator"
		app:layout_constraintTop_toBottomOf="@id/flCurrentImageTwo" />

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:orientation="vertical"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="@id/viewVerticalSeparator"
		app:layout_constraintTop_toBottomOf="@id/tvChooseTwoImageSrc">

		<TextView
			android:id="@+id/btnChooseTwoFromGallery"
			style="@style/S16White"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/background_choose_button_gallery"
			android:paddingHorizontal="44dp"
			android:paddingVertical="16dp"
			android:text="@string/main_screen_button_choose_from_gallery"
			app:layout_constraintEnd_toEndOf="@id/viewVerticalSeparator"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/ivCurrentImageOne" />

		<TextView
			android:id="@+id/btnChooseTwoFromLink"
			style="@style/S16White"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:background="@drawable/background_choose_button_gallery"
			android:paddingHorizontal="44dp"
			android:paddingVertical="16dp"
			android:text="@string/main_screen_button_choose_from_link"
			app:layout_constraintEnd_toEndOf="@id/viewVerticalSeparator"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/ivCurrentImageOne" />

	</LinearLayout>

	<View
		android:id="@+id/viewHorizontalSeparator"
		android:layout_width="match_parent"
		android:layout_height="2dp"
		android:layout_marginTop="16dp"
		android:background="@color/white"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/llChooseSourceList" />

</androidx.constraintlayout.widget.ConstraintLayout>